// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment Level 0 renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment
    createdAt={0}
    createdBy="SomeUser"
    id="SomeId"
    level={0}
    parentId="story-id"
    root={
      Object {
        "id": "SomeId",
        "title": "SomeTitle",
      }
    }
    storyId="story-id"
    text="SomeContent"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
            onClick={[Function]}
            tabIndex="0"
          >
            [
            −
            ]
          </styled.div>
          <Styled(Connect(Link))
            to="/user/SomeUser"
          />
          <Styled(_default)
            createdAt={0}
          />
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/SomeId"
          >
            link
          </Styled(Connect(Link))>
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id"
          >
            parent
          </Styled(Connect(Link))>
        </styled.div>,
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "SomeContent",
            }
          }
        />,
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>,
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />,
            <Styled(_default)
              createdAt={0}
            />,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id"
            >
              parent
            </Styled(Connect(Link))>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "[",
                "−",
                "]",
              ],
              "onClick": [Function],
              "tabIndex": "0",
            },
            "ref": null,
            "rendered": Array [
              "[",
              "−",
              "]",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "to": "/user/SomeUser",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "createdAt": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "link",
              "to": "/storyDetails/story-id/comments/SomeId",
            },
            "ref": null,
            "rendered": "link",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "parent",
              "to": "/storyDetails/story-id",
            },
            "ref": null,
            "rendered": "parent",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "dangerouslySetInnerHTML": Object {
            "__html": "SomeContent",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />
            <Styled(_default)
              createdAt={0}
            />
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id"
            >
              parent
            </Styled(Connect(Link))>
          </styled.div>,
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "SomeContent",
              }
            }
          />,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                onClick={[Function]}
                tabIndex="0"
              >
                [
                −
                ]
              </styled.div>,
              <Styled(Connect(Link))
                to="/user/SomeUser"
              />,
              <Styled(_default)
                createdAt={0}
              />,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/SomeId"
              >
                link
              </Styled(Connect(Link))>,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id"
              >
                parent
              </Styled(Connect(Link))>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "[",
                  "−",
                  "]",
                ],
                "onClick": [Function],
                "tabIndex": "0",
              },
              "ref": null,
              "rendered": Array [
                "[",
                "−",
                "]",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "to": "/user/SomeUser",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "createdAt": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "link",
                "to": "/storyDetails/story-id/comments/SomeId",
              },
              "ref": null,
              "rendered": "link",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "parent",
                "to": "/storyDetails/story-id",
              },
              "ref": null,
              "rendered": "parent",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "SomeContent",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Comment Level 1 renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment
    createdAt={0}
    createdBy="SomeUser"
    id="SomeId"
    level={1}
    parentId="parent-id"
    root={
      Object {
        "id": "SomeId",
        "title": "SomeTitle",
      }
    }
    storyId="story-id"
    text="SomeContent"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
            onClick={[Function]}
            tabIndex="0"
          >
            [
            −
            ]
          </styled.div>
          <Styled(Connect(Link))
            to="/user/SomeUser"
          />
          <Styled(_default)
            createdAt={0}
          />
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/SomeId"
          >
            link
          </Styled(Connect(Link))>
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/parent-id"
          >
            parent
          </Styled(Connect(Link))>
        </styled.div>,
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "SomeContent",
            }
          }
        />,
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>,
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />,
            <Styled(_default)
              createdAt={0}
            />,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "[",
                "−",
                "]",
              ],
              "onClick": [Function],
              "tabIndex": "0",
            },
            "ref": null,
            "rendered": Array [
              "[",
              "−",
              "]",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "to": "/user/SomeUser",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "createdAt": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "link",
              "to": "/storyDetails/story-id/comments/SomeId",
            },
            "ref": null,
            "rendered": "link",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "parent",
              "to": "/storyDetails/story-id/comments/parent-id",
            },
            "ref": null,
            "rendered": "parent",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "dangerouslySetInnerHTML": Object {
            "__html": "SomeContent",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />
            <Styled(_default)
              createdAt={0}
            />
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>
          </styled.div>,
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "SomeContent",
              }
            }
          />,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                onClick={[Function]}
                tabIndex="0"
              >
                [
                −
                ]
              </styled.div>,
              <Styled(Connect(Link))
                to="/user/SomeUser"
              />,
              <Styled(_default)
                createdAt={0}
              />,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/SomeId"
              >
                link
              </Styled(Connect(Link))>,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/parent-id"
              >
                parent
              </Styled(Connect(Link))>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "[",
                  "−",
                  "]",
                ],
                "onClick": [Function],
                "tabIndex": "0",
              },
              "ref": null,
              "rendered": Array [
                "[",
                "−",
                "]",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "to": "/user/SomeUser",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "createdAt": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "link",
                "to": "/storyDetails/story-id/comments/SomeId",
              },
              "ref": null,
              "rendered": "link",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "parent",
                "to": "/storyDetails/story-id/comments/parent-id",
              },
              "ref": null,
              "rendered": "parent",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "SomeContent",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Comment Level 20 renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment
    createdAt={0}
    createdBy="SomeUser"
    id="SomeId"
    level={20}
    parentId="parent-id"
    storyId="story-id"
    text="SomeContent"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
            onClick={[Function]}
            tabIndex="0"
          >
            [
            −
            ]
          </styled.div>
          <Styled(Connect(Link))
            to="/user/SomeUser"
          />
          <Styled(_default)
            createdAt={0}
          />
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/SomeId"
          >
            link
          </Styled(Connect(Link))>
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/parent-id"
          >
            parent
          </Styled(Connect(Link))>
        </styled.div>,
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "SomeContent",
            }
          }
        />,
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>,
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />,
            <Styled(_default)
              createdAt={0}
            />,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "[",
                "−",
                "]",
              ],
              "onClick": [Function],
              "tabIndex": "0",
            },
            "ref": null,
            "rendered": Array [
              "[",
              "−",
              "]",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "to": "/user/SomeUser",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "createdAt": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "link",
              "to": "/storyDetails/story-id/comments/SomeId",
            },
            "ref": null,
            "rendered": "link",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "parent",
              "to": "/storyDetails/story-id/comments/parent-id",
            },
            "ref": null,
            "rendered": "parent",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "dangerouslySetInnerHTML": Object {
            "__html": "SomeContent",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />
            <Styled(_default)
              createdAt={0}
            />
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>
          </styled.div>,
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "SomeContent",
              }
            }
          />,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                onClick={[Function]}
                tabIndex="0"
              >
                [
                −
                ]
              </styled.div>,
              <Styled(Connect(Link))
                to="/user/SomeUser"
              />,
              <Styled(_default)
                createdAt={0}
              />,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/SomeId"
              >
                link
              </Styled(Connect(Link))>,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/parent-id"
              >
                parent
              </Styled(Connect(Link))>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "[",
                  "−",
                  "]",
                ],
                "onClick": [Function],
                "tabIndex": "0",
              },
              "ref": null,
              "rendered": Array [
                "[",
                "−",
                "]",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "to": "/user/SomeUser",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "createdAt": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "link",
                "to": "/storyDetails/story-id/comments/SomeId",
              },
              "ref": null,
              "rendered": "link",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "parent",
                "to": "/storyDetails/story-id/comments/parent-id",
              },
              "ref": null,
              "rendered": "parent",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "SomeContent",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Comment Level 20 renders correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment
    createdAt={0}
    createdBy="SomeUser"
    id="SomeId"
    level={20}
    parentId="parent-id"
    storyId="story-id"
    text="SomeContent"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
            onClick={[Function]}
            tabIndex="0"
          >
            [
            −
            ]
          </styled.div>
          <Styled(Connect(Link))
            to="/user/SomeUser"
          />
          <Styled(_default)
            createdAt={0}
          />
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/SomeId"
          >
            link
          </Styled(Connect(Link))>
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/parent-id"
          >
            parent
          </Styled(Connect(Link))>
        </styled.div>,
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "SomeContent",
            }
          }
        />,
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>,
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />,
            <Styled(_default)
              createdAt={0}
            />,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "[",
                "−",
                "]",
              ],
              "onClick": [Function],
              "tabIndex": "0",
            },
            "ref": null,
            "rendered": Array [
              "[",
              "−",
              "]",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "to": "/user/SomeUser",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "createdAt": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "link",
              "to": "/storyDetails/story-id/comments/SomeId",
            },
            "ref": null,
            "rendered": "link",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "parent",
              "to": "/storyDetails/story-id/comments/parent-id",
            },
            "ref": null,
            "rendered": "parent",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "dangerouslySetInnerHTML": Object {
            "__html": "SomeContent",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />
            <Styled(_default)
              createdAt={0}
            />
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>
          </styled.div>,
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "SomeContent",
              }
            }
          />,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                onClick={[Function]}
                tabIndex="0"
              >
                [
                −
                ]
              </styled.div>,
              <Styled(Connect(Link))
                to="/user/SomeUser"
              />,
              <Styled(_default)
                createdAt={0}
              />,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/SomeId"
              >
                link
              </Styled(Connect(Link))>,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/parent-id"
              >
                parent
              </Styled(Connect(Link))>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "[",
                  "−",
                  "]",
                ],
                "onClick": [Function],
                "tabIndex": "0",
              },
              "ref": null,
              "rendered": Array [
                "[",
                "−",
                "]",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "to": "/user/SomeUser",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "createdAt": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "link",
                "to": "/storyDetails/story-id/comments/SomeId",
              },
              "ref": null,
              "rendered": "link",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "parent",
                "to": "/storyDetails/story-id/comments/parent-id",
              },
              "ref": null,
              "rendered": "parent",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "SomeContent",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Comment with state.expanded=false renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment
    createdAt={0}
    createdBy="SomeUser"
    id="SomeId"
    level={1}
    parentId="parent-id"
    storyId="story-id"
    text="SomeContent"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
            onClick={[Function]}
            tabIndex="0"
          >
            [
            −
            ]
          </styled.div>
          <Styled(Connect(Link))
            to="/user/SomeUser"
          />
          <Styled(_default)
            createdAt={0}
          />
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/SomeId"
          >
            link
          </Styled(Connect(Link))>
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/parent-id"
          >
            parent
          </Styled(Connect(Link))>
        </styled.div>,
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "SomeContent",
            }
          }
        />,
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>,
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />,
            <Styled(_default)
              createdAt={0}
            />,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "[",
                "−",
                "]",
              ],
              "onClick": [Function],
              "tabIndex": "0",
            },
            "ref": null,
            "rendered": Array [
              "[",
              "−",
              "]",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "to": "/user/SomeUser",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "createdAt": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "link",
              "to": "/storyDetails/story-id/comments/SomeId",
            },
            "ref": null,
            "rendered": "link",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "parent",
              "to": "/storyDetails/story-id/comments/parent-id",
            },
            "ref": null,
            "rendered": "parent",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "dangerouslySetInnerHTML": Object {
            "__html": "SomeContent",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />
            <Styled(_default)
              createdAt={0}
            />
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>
          </styled.div>,
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "SomeContent",
              }
            }
          />,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                onClick={[Function]}
                tabIndex="0"
              >
                [
                −
                ]
              </styled.div>,
              <Styled(Connect(Link))
                to="/user/SomeUser"
              />,
              <Styled(_default)
                createdAt={0}
              />,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/SomeId"
              >
                link
              </Styled(Connect(Link))>,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/parent-id"
              >
                parent
              </Styled(Connect(Link))>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "[",
                  "−",
                  "]",
                ],
                "onClick": [Function],
                "tabIndex": "0",
              },
              "ref": null,
              "rendered": Array [
                "[",
                "−",
                "]",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "to": "/user/SomeUser",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "createdAt": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "link",
                "to": "/storyDetails/story-id/comments/SomeId",
              },
              "ref": null,
              "rendered": "link",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "parent",
                "to": "/storyDetails/story-id/comments/parent-id",
              },
              "ref": null,
              "rendered": "parent",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "SomeContent",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Comment without children renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment
    createdAt={0}
    createdBy="SomeUser"
    id="SomeId"
    level={1}
    parentId="parent-id"
    storyId="story-id"
    text="SomeContent"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div
            onClick={[Function]}
            tabIndex="0"
          >
            [
            −
            ]
          </styled.div>
          <Styled(Connect(Link))
            to="/user/SomeUser"
          />
          <Styled(_default)
            createdAt={0}
          />
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/SomeId"
          >
            link
          </Styled(Connect(Link))>
          <styled.div />
          <Styled(Connect(Link))
            to="/storyDetails/story-id/comments/parent-id"
          >
            parent
          </Styled(Connect(Link))>
        </styled.div>,
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "SomeContent",
            }
          }
        />,
        undefined,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>,
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />,
            <Styled(_default)
              createdAt={0}
            />,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>,
            <styled.div />,
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                "[",
                "−",
                "]",
              ],
              "onClick": [Function],
              "tabIndex": "0",
            },
            "ref": null,
            "rendered": Array [
              "[",
              "−",
              "]",
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "to": "/user/SomeUser",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "createdAt": 0,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "link",
              "to": "/storyDetails/story-id/comments/SomeId",
            },
            "ref": null,
            "rendered": "link",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "parent",
              "to": "/storyDetails/story-id/comments/parent-id",
            },
            "ref": null,
            "rendered": "parent",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "dangerouslySetInnerHTML": Object {
            "__html": "SomeContent",
          },
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      undefined,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div
              onClick={[Function]}
              tabIndex="0"
            >
              [
              −
              ]
            </styled.div>
            <Styled(Connect(Link))
              to="/user/SomeUser"
            />
            <Styled(_default)
              createdAt={0}
            />
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/SomeId"
            >
              link
            </Styled(Connect(Link))>
            <styled.div />
            <Styled(Connect(Link))
              to="/storyDetails/story-id/comments/parent-id"
            >
              parent
            </Styled(Connect(Link))>
          </styled.div>,
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "SomeContent",
              }
            }
          />,
          undefined,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div
                onClick={[Function]}
                tabIndex="0"
              >
                [
                −
                ]
              </styled.div>,
              <Styled(Connect(Link))
                to="/user/SomeUser"
              />,
              <Styled(_default)
                createdAt={0}
              />,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/SomeId"
              >
                link
              </Styled(Connect(Link))>,
              <styled.div />,
              <Styled(Connect(Link))
                to="/storyDetails/story-id/comments/parent-id"
              >
                parent
              </Styled(Connect(Link))>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "[",
                  "−",
                  "]",
                ],
                "onClick": [Function],
                "tabIndex": "0",
              },
              "ref": null,
              "rendered": Array [
                "[",
                "−",
                "]",
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "to": "/user/SomeUser",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "createdAt": 0,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "link",
                "to": "/storyDetails/story-id/comments/SomeId",
              },
              "ref": null,
              "rendered": "link",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "parent",
                "to": "/storyDetails/story-id/comments/parent-id",
              },
              "ref": null,
              "rendered": "parent",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "dangerouslySetInnerHTML": Object {
              "__html": "SomeContent",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        undefined,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Invalid comment renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Comment />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
